aws_cluster/frontend/aws_frontend_kube_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        role: SEP-Worker
      containers:
      - name: frontend
        image: 325852638497.dkr.ecr.us-east-1.amazonaws.com/manual_gui_ecr:frontend_test
        imagePullPolicy: Always # Always pull the latest image
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "2Gi"
            cpu: "500m"
#      automountServiceAccountToken: false
